#502: on the other hand, don't run cypress tests when postgres-test kicks off

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -44,6 +44,9 @@ postgres-test:on-schedule:
 
 # all jobs that actually run tests can use the same definition
 cypress_test:
+  except:
+    variables:
+      - $TYPE == "postgrestest"
   image: amazonlinux:2
   stage: testCypress
   before_script:
