--- a/skills-bootstrap/pom.xml
+++ b/skills-bootstrap/pom.xml
@@ -65,8 +65,7 @@
               <goal>install-node-and-npm</goal>
             </goals>
             <configuration>
-              <nodeVersion>v11.6.0</nodeVersion>
-             <!--<npmVersion>3.10.10</npmVersion>-->
+              <nodeVersion>${node.version}</nodeVersion>
             </configuration>
           </execution>
           <execution>
