--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -81,17 +81,10 @@ cypress_test:
     - echo "@skills:registry=http://$NEXUS_SERVER/repository/skills-registry/" > ~/.npmrc
     - cat ~/.npmrc
   script:
-    # start the server in the background
     - cd e2e-tests
-    - npm run backend:start:ci &
-    - cd ../client-display
     - npm install
-    - npm run serve &
-    - cd ../e2e-tests
-    - npm install
-    - npm run backend:waitToStart
-    - npx wait-on -t 40000 http://localhost:8083
-    # run tests
+    # start the server in the background
+    - npm run cyServices:start
     - npm run cy:run
   artifacts:
     when: always
