--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,47 +1,47 @@
 stages:
-  - build
+#  - build
   - testCypress
   - pushToNexus
   - deploy
 
 
-build:
-  except:
-    variables:
-      - $TYPE == "postgrestest"
-  image: maven:3.6.0-jdk-11
-  stage: build
-  before_script:
-    - ./ci/installNode.sh
-    - ./ci/setupRepos.sh
-  script:
-    - mvn --batch-mode install
-  artifacts:
-    paths:
-      - backend/pom.xml
-      - backend/target/backend-*.jar
-      - backend/target/skills-service-tests.log
-
-postgres-test:on-schedule:
-  only:
-    variables:
-      - $TYPE == "postgrestest"
-  image: maven:3.6.0-jdk-11
-  stage: build
-  services:
-    - postgres:latest
-  variables:
-    POSTGRES_PASSWORD: skillsPassword
-    POSTGRES_DB: skills
-  before_script:
-    - ./ci/installNode.sh
-    - ./ci/setupRepos.sh
-  script:
-    - mvn --batch-mode test -Dspring.datasource.url=jdbc:postgresql://postgres:5432/skills -Dspring.datasource.username=postgres -Dspring.datasource.password=skillsPassword
-  artifacts:
-    paths:
-    - backend/target/backend-*.jar
-    - backend/target/skills-service-tests.log
+#build:
+#  except:
+#    variables:
+#      - $TYPE == "postgrestest"
+#  image: maven:3.6.0-jdk-11
+#  stage: build
+#  before_script:
+#    - ./ci/installNode.sh
+#    - ./ci/setupRepos.sh
+#  script:
+#    - mvn --batch-mode install
+#  artifacts:
+#    paths:
+#      - backend/pom.xml
+#      - backend/target/backend-*.jar
+#      - backend/target/skills-service-tests.log
+#
+#postgres-test:on-schedule:
+#  only:
+#    variables:
+#      - $TYPE == "postgrestest"
+#  image: maven:3.6.0-jdk-11
+#  stage: build
+#  services:
+#    - postgres:latest
+#  variables:
+#    POSTGRES_PASSWORD: skillsPassword
+#    POSTGRES_DB: skills
+#  before_script:
+#    - ./ci/installNode.sh
+#    - ./ci/setupRepos.sh
+#  script:
+#    - mvn --batch-mode test -Dspring.datasource.url=jdbc:postgresql://postgres:5432/skills -Dspring.datasource.username=postgres -Dspring.datasource.password=skillsPassword
+#  artifacts:
+#    paths:
+#    - backend/target/backend-*.jar
+#    - backend/target/skills-service-tests.log
 
 # all jobs that actually run tests can use the same definition
 cypress_test:
