--- a/service/src/main/resources/application.yml
+++ b/service/src/main/resources/application.yml
@@ -61,13 +61,13 @@ spring:
       client:
         registration:
           google:
-            client-id: 584882456739-26jqdi7pd7v6vn4s3vuihvncp40e6nts.apps.googleusercontent.com
-            client-secret: IGi3Nu2kU4gI582OXc6pn7uz
+            client-id:
+            client-secret:
             redirectUriTemplate: 'http://localhost:8080/{action}/oauth2/code/{registrationId}'
             iconClass: fab fa-google
           github:
-            client-id: 6915872bda33a22ad6ef
-            client-secret: d79a5c4c063f4afae5963c50b73e828251ca3ae2
+            client-id:
+            client-secret:
             redirectUriTemplate: 'http://localhost:8080/{action}/oauth2/code/{registrationId}'
             iconClass: fab fa-github
 skills:
