#536 - replaced google and github oauth attributes from application.yml with fake values

--- a/service/src/main/resources/application.yml
+++ b/service/src/main/resources/application.yml
@@ -61,13 +61,13 @@ spring:
       client:
         registration:
           google:
-            client-id:
-            client-secret:
+            client-id: 12345
+            client-secret: 67890
             redirectUriTemplate: 'http://localhost:8080/{action}/oauth2/code/{registrationId}'
             iconClass: fab fa-google
           github:
-            client-id:
-            client-secret:
+            client-id: 98765
+            client-secret: ABCDEF
             redirectUriTemplate: 'http://localhost:8080/{action}/oauth2/code/{registrationId}'
             iconClass: fab fa-github
 skills:
