--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -26,9 +26,10 @@ jobs:
       with:
         node-version: '12'
 
-    # Runs a single command using the runners shell
-    - name: Run a one-line script yes
-      run: echo Hello, world!
+    - name: Set up Maven
+      uses: stCarolas/setup-maven@v3
+      with:
+        maven-version: 3.6.0
 
     # Runs a set of commands using the runners shell
     - name: Run a multi-line script
