--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -31,6 +31,10 @@ jobs:
       with:
         maven-version: 3.6.0
 
+    - uses: actions/setup-java@v1
+      with:
+        java-version: '11.X.X' # The JDK version to make available on the path.
+
     # Runs a set of commands using the runners shell
     - name: Run a multi-line script
       run: |
