--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -35,8 +35,7 @@ jobs:
       with:
         java-version: '11.X.X' # The JDK version to make available on the path.
 
-    # Runs a set of commands using the runners shell
-    - name: Run a multi-line script
+    - name: Print Versions
       run: |
-        echo Add other actions to build,
-        echo test, and deploy your project.
+        mvn --version
+        java -version
