#1: GitHub Actions CI - WIP - temporary moved call-stack-prof here

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -40,5 +40,5 @@ jobs:
         mvn --version
         java -version
 
-#    - name: Build
-#      run: mvn --batch-mode install
+    - name: Build skills service
+      run: mvn --batch-mode install
