--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
     <packaging>pom</packaging>
     <version>1.2.0-SNAPSHOT</version>
     <modules>
+        <module>call-stack-profiler</module>
         <module>dashboard</module>
         <module>client-display</module>
         <module>service</module>
