#1: CI - WIP - Websocket specs will now timeout after 30 seconds and not wait forever

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -50,3 +50,11 @@ jobs:
 
     - name: Build skills service
       run: mvn --batch-mode install
+
+    - name: Run Cypress tests
+      run: |
+        cd e2e-tests
+        npm install
+        npm run cyServices:start
+        npm run cy:run
+        cd ..
