--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -4,7 +4,12 @@ name: Continuous Integration
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
-on: [push, pull_request]
+on: [
+  push,
+  pull_request,
+  schedule:
+   - cron: '*/5 * * * *'
+]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
