--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -5,8 +5,8 @@ name: Continuous Integration
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
 on: [
-  push,
-  pull_request,
+  push:
+  pull_request:
   schedule:
    - cron: '*/5 * * * *'
 ]
