--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -6,7 +6,11 @@ name: Continuous Integration
 # events but only for the master branch
 on: [
   push:
+    paths-ignore:
+      - 'README.md'
   pull_request:
+    paths-ignore:
+      - 'README.md'
   schedule:
    - cron: '*/5 * * * *'
 ]
