--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -23,7 +23,7 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
     - name: github event name
-      run: echo ${GITHUB_EVENT_NAME}
+      run: echo env.GITHUB_EVENT_NAME
 
     - name: only if push
       if: ${{ env.GITHUB_EVENT_NAME }} == 'push'
