--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -23,14 +23,14 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
     - name: github event name
-      run: echo env.GITHUB_EVENT_NAME
+      run: echo github.event
 
     - name: only if push
-      if: ${{ env.GITHUB_EVENT_NAME }} == 'push'
+      if: github.event == 'push'
       run: echo 'this is push'
 
     - name: only if schedule
-      if: ${{ env.GITHUB_EVENT_NAME }}  == 'schedule'
+      if: github.event == 'schedule'
       run: echo 'this is schedule'
 
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
