--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -6,9 +6,11 @@ on:
   push:
     paths-ignore:
       - 'README.md'
+      - '.github/workflows/build-and-test-postgres.yml'
   pull_request:
     paths-ignore:
       - 'README.md'
+      - '.github/workflows/build-and-test-postgres.yml'
 #  schedule:
 #   - cron: '*/5 * * * *'
 
@@ -66,26 +68,9 @@ jobs:
       if: ${{ always() }}
       uses: actions/upload-artifact@v2
       with:
-        name: skills-service jar
-        path: ./service/target/*.jar
-
-    - name: upload skills service logs
-      if: ${{ always() }}
-      uses: actions/upload-artifact@v2
-      with:
-        name: skills-service logs
-        path: ./service/target/*.log
-
-    - name: upload cypress
-      if: ${{ always() }}
-      uses: actions/upload-artifact@v2
-      with:
-        name: cypress videos
-        path: ./e2e-tests/cypress
-
-    - name: upload services logs during cypress rung
-      if: ${{ always() }}
-      uses: actions/upload-artifact@v2
-      with:
-        name: services logs during cypress runs
-        path: ./e2e-tests/logs
+        name: CI result artifacts
+        path: |
+          ./service/target/*.jar
+          ./service/target/*.log
+          ./e2e-tests/cypress
+          ./e2e-tests/logs
