--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,111 +1,24 @@
 stages:
   - build
-  - testCypress
   - pushToNexus
   - deploy
 
-
 build:
-  except:
-    variables:
-      - $TYPE == "postgrestest"
-  image: maven:3.6.0-jdk-11
+  image: maven:3.6.3-jdk-11
   stage: build
   before_script:
     - ./ci/installNode.sh
     - ./ci/setupRepos.sh
   script:
-    - mvn --batch-mode install
+    - mvn --batch-mode install -DskipTests
   artifacts:
     paths:
       - service/pom.xml
       - service/target/skills-service-*.jar
       - service/target/skills-service-tests.log
 
-postgres-test:on-schedule:
-  only:
-    variables:
-      - $TYPE == "postgrestest"
-  image: maven:3.6.0-jdk-11
-  stage: build
-  services:
-    - postgres:latest
-  variables:
-    POSTGRES_PASSWORD: skillsPassword
-    POSTGRES_DB: skills
-  before_script:
-    - ./ci/installNode.sh
-    - ./ci/setupRepos.sh
-  script:
-    - mvn --batch-mode test -Dspring.datasource.url=jdbc:postgresql://postgres:5432/skills -Dspring.datasource.username=postgres -Dspring.datasource.password=skillsPassword
-  artifacts:
-    paths:
-    - service/target/skills-service-*.jar
-    - service/target/skills-service-tests.log
-
-# all jobs that actually run tests can use the same definition
-cypress_test:
-  except:
-    variables:
-      - $TYPE == "postgrestest"
-  image: amazonlinux:2
-  stage: testCypress
-  before_script:
-    - cat /etc/os-release
-    - uname -a
-    # install packaged fonts
-    - yum install -y fontconfig
-    - cp -r e2e-tests/cypress/fonts/* /usr/share/fonts/
-    - fc-cache -fv
-    - fc-list | wc
-    - fc-list
-#    - yum install -y gtk2.x86_64
-    - yum install -y which
-    - yum update -y
-    - yum install -y gtk3
-    - yum install -y libnotify-devel
-    - yum install -y GConf2
-    - yum install -y libXScrnSaver
-#    - yum install -y libnss3
-#    - yum install -y libxss1
-    - yum install -y nss
-#    - yum install -y libasound2
-    - yum install -y xorg-x11-server-Xvfb
-    - amazon-linux-extras install -y java-openjdk11
-    - java --version
-    - yum install -y gcc-c++ make
-    - curl -sL https://rpm.nodesource.com/setup_12.x | bash -
-    - yum install -y nodejs
-    - node -v
-    - npm -v
-    - npm install -g npm
-    - npm -v
-    - echo "@skills:registry=http://$NEXUS_SERVER/repository/skills-registry/" > ~/.npmrc
-    - cat ~/.npmrc
-  script:
-    - cd e2e-tests
-    - npm install
-    # start the server in the background
-    - npm run cyServices:start
-    - npm run cy:run
-  artifacts:
-    when: always
-    paths:
-      - e2e-tests/cypress/videos/*.mp4
-      - e2e-tests/cypress/videos/**/*.mp4
-      - e2e-tests/cypress/screenshots/*.png
-      - e2e-tests/cypress/screenshots/**/*.png
-      - e2e-tests/cypress/snapshots/**/*
-      - e2e-tests/cypress/snapshots/client-display/**/*
-      - e2e-tests/cypress/snapshots/client-display/**/__diff_output__/*
-      - e2e-tests/logs/*
-    expire_in: 1 day
-
 pushToNexus:
-  except:
-    variables:
-      - $TYPE == "postgrestest"
-  image: maven:3.6.0-jdk-11
+  image: maven:3.6.3-jdk-11
   stage: pushToNexus
   script:
     - echo "@skills:registry=http://$NEXUS_SERVER/repository/skills-registry/" > ~/.npmrc
@@ -126,9 +39,6 @@ pushToNexus:
       - $BRANCH_TO_DEPLOY_SKILLS_SERVICE == $CI_COMMIT_REF_NAME
 
 deploy:
-  except:
-    variables:
-      - $TYPE == "postgrestest"
   image: alpine:latest
   stage: deploy
   before_script:
