--- a/.github/workflows/build-and-test-postgres.yml
+++ b/.github/workflows/build-and-test-postgres.yml
@@ -3,9 +3,9 @@
 name: Test against PostgreSQL
 
 on:
-  push:
-    paths-ignore:
-      - 'README.md'
+#  push:
+#    paths-ignore:
+#      - 'README.md'
   schedule:
    - cron: '0 5 * * *'
 
