--- a/.github/workflows/build-and-test-postgres.yml
+++ b/.github/workflows/build-and-test-postgres.yml
@@ -71,11 +71,18 @@ jobs:
     - name: Build skills-service
       run: mvn --batch-mode install -Dspring.datasource.url=jdbc:postgresql://localhost:5432/skills -Dspring.datasource.username=postgres -Dspring.datasource.password=skillsPassword
 
+    - name: check all dirs
+      run: ls -lR ./
+
+    - name: check top level dir
+      run: ls -l ./
+
     - name: Run Cypress tests
       run: |
         cd e2e-tests
         npm install
-        npm run cyServices:start
+        npm run cyServices:start:skills-service:postgresql
+        npm run cyServices:start:client-display
         npm run cy:run
         cd ..
 
