--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -56,6 +56,12 @@ jobs:
     - name: Build skills-service
       run: mvn --batch-mode install
 
+    - name: check all dirs
+      run: ls -lR ./
+
+    - name: check top level dir
+      run: ls -l ./
+
     - name: Run Cypress tests
       run: |
         cd e2e-tests
