--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -7,13 +7,12 @@ on:
     paths-ignore:
       - 'README.md'
       - '.github/workflows/build-and-test-postgres.yml'
+      - '.gitlab-ci.yml'
   pull_request:
     paths-ignore:
       - 'README.md'
       - '.github/workflows/build-and-test-postgres.yml'
-#  schedule:
-#   - cron: '*/5 * * * *'
-
+      - '.gitlab-ci.yml'
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
