--- a/service/pom.xml
+++ b/service/pom.xml
@@ -500,6 +500,7 @@
                         <exclude>**/*.jks</exclude>
                         <exclude>**/*.ftl</exclude>
                         <exclude>src/main/resources/public/**</exclude>
+                        <exclude>src/main/resources/templates/**</exclude>
                         <exclude>**/license/*.properties</exclude>
                     </excludes>
                 </configuration>
