--- a/service/pom.xml
+++ b/service/pom.xml
@@ -249,6 +249,13 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>com.icegreen</groupId>
+            <artifactId>greenmail</artifactId>
+            <version>${greenmail.version}</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
