--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -33,6 +33,7 @@
     "matchmedia-polyfill": "0.3.2",
     "material-icons": "0.3.1",
     "moment": "2.24.0",
+    "node-emoji": "1.10.0",
     "numeral": "2.0.6",
     "sockjs-client": "1.4.0",
     "vee-validate": "2.2.15",
