--- a/client-display/package.json
+++ b/client-display/package.json
@@ -28,7 +28,7 @@
     "lodash": "4.17.19",
     "marked": "0.7.0",
     "material-icons": "0.3.1",
-    "node-emoji": "^1.10.0",
+    "node-emoji": "1.10.0",
     "numeral": "2.0.6",
     "postmate": "1.5.1",
     "q": "1.5.1",
