--- a/service/src/main/resources/application.yml
+++ b/service/src/main/resources/application.yml
@@ -83,7 +83,7 @@ skills:
       minimumProjectPoints: 100
       descriptionMaxLength: 2000
       maxTimeWindowInMinutes: 43200
-      docsHost: http://skillsasaservicedocs.com
+      docsHost: https://code.nsa.gov/skills-docs
       maxProjectsPerAdmin: 25
       maxSubjectsPerProject: 25
       maxBadgesPerProject: 25
